# autobids-portal

./: .dockerignore  .envtemplate  .gitignore  .pylintrc  Dockerfile  Dockerfile-dev  Dockerfile-production  MANIFEST.in  README.md  app.db  app_test.db  autobidsportal.ini.example  bids_form.py  compose-dev.yaml  compose-production.yaml  compose.yaml  config.py  crontab.example  defaultconfig.py  entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg
.github/: release-drafter.yml
.github/workflows/: ci.yml  dispatch.yml  release.yml
app/: __init__.py  forms.py  models.py  routes.py
app/static/styles/: survey.css
app/templates/: answer_info.html  base.html  login.html  register.html  results.html  survey.html
autobidsportal/: Dcm4cheUtils.py  __init__.py  app.py  apptainer.py  bids.py  cli.py  datalad.py  dateutils.py  dcm4cheutils.py  dcmutils.py  dicom.py  email.py  errors.py  filesystem.py  forms.py  models.py  routes.py  ssh.py  tasks.py
autobidsportal/resources/: heuristics.py.default
autobidsportal/static/lib/autobids-react/: .eslintrc.json  .gitignore  index.jsx  nwb.config.js  package-lock.json  package.json
autobidsportal/static/lib/autobids-react/src/: index.js
autobidsportal/static/lib/autobids-react/src/Accordion/: Accordion.js  DirItem.js  TextItem.js  genAccordion.js  (+1 more)
autobidsportal/static/lib/autobids-react/umd/: react-test.js  react-test.min.js  react-test.min.js.map
autobidsportal/static/styles/: survey.css
autobidsportal/tasks_module/: __init__.py  gradcorrect.py
autobidsportal/templates/: 400.html  404.html  500.html  admin.html  administration.html  answer_info.html  base.html  dicom.html  dicom_error.html  gen_reset.html  getting_started.html  index.html  login.html  register.html  reset_password.html  results.html  study_config.html  study_demographics.html  survey.html
autobidsportal_migrations/versions/: 01c660ea1a21_.py  15b10ad3cee8_.py  297059b1199d_.py  2b0ce56b700c_.py  460789b99fd5_provide_default_heuristic_and_subj_expr.py  4e12d841fcc8_make_task_user_nullable.py  4ece0bb6663e_.py  511848007f2f_.py  57d0a5f7aa51_.py  5b823749a511_.py  5ca67c235af0_add_tar2bids_dataset_relationship.py  720ca7347aaa_.py  75c983055bf6_.py  96ab962880b5_.py  98cb485f1427_.py  990a8d4f7c14_.py  a234d668215d_.py  bd2e4b1a6955_.py  be4aea182c3a_.py  bedbdb9aae3c_.py  ccb400cdf89d_.py  cd1bb82fd708_.py  e22f2179c1be_make_cfmm2taroutput_many_to_many_with_.py  eff38490649c_.py  f48a768460d1_.py  f7a3b9b04159_.py  ff69e5ddd46e_.py
compose/: add_orthanc_certs.sh  dcm4che-key.pem  nginx.conf  orthanc-crt.pem  orthanc-key.pem  orthanc.crt  orthanc.json  orthanc.key
compose/cfmm2tar-custom/: Dockerfile  autobids-cfmm2tar.def  dcm4che-crt.pem
compose/ssh/: id_rsa  id_rsa.pub
migrations/versions/: 00e716e0268d_add_new_column_and_remove_old_column.py  01c660ea1a21_.py  04b27f747b69_.py  08452086edec_.py  0ac2c5dd957c_.py  0aed3bd08d28_.py  0b910243bd6b_remove_old_columns.py  0f2dfb1701f7_.py  15b10ad3cee8_.py  1b26259145ea_.py  1b41d17ee9fd_add_sample_column.py  239659cf00e8_remove_coulmn.py  262165a246f2_resolve_error.py  2a2cbf8f836b_.py  2b0ce56b700c_.py  35266d9fc923_resolve_error.py  35d2982f179f_users_table.py  36e9f11fe475_.py  384fe72e3812_.py  3a8ccc756127_.py  45de2fe4035d_.py  46410b7eaef6_add_attached_tar_file_tracking.py  4843080535a3_.py  4b8596291469_tasks.py  4c19f0b4eec5_.py  56358bd1861b_.py  57d0a5f7aa51_.py  59c756d48de4_.py  5b823749a511_.py  60b071af63d5_add_new_columns.py  61572ff9ea0b_refactor_all_models.py  6444e0280948_.py  6b9c83e6b405_.py  6d5545547b89_.py  720ca7347aaa_.py  75c983055bf6_.py  7a828f145fca_users_table.py  82e60481986a_.py  8737a9896f53_resolve_error.py  8fa99ba73c27_user_answer_and_submitter.py  (+36 more)
tests/: conftest.py  test_bids_form.py  testdicomserver.py
tests/functional/: test_routes.py
tests/unit/: test_bids.py  test_models.py
(+9 files in other folders)
