[metadata]
name = autobidsportal
version = 2.1.0
description = Web portal for managing autobids
long_description = file: README.md

[options]
packages = autobidsportal
install_requires =
    alembic~=1.5
    email-validator~=1.1
    Flask~=2.0
    Flask-Excel~=0.0
    Flask-Login~=0.5
    Flask-Migrate~=2.7
    Flask-SQLAlchemy~=2.5
    Flask-WTF~=0.14
    Flask-Mail~=0.9
    rq~=1.9
    pytest~=6.2
    SQLAlchemy~=1.4
    WTForms~=2.3
    defusedxml~=0.7
include_package_data = True
